升级项目到 Spring Boot 3.2.5 + Java 17
主要更新:
- 升级 Spring Boot 2.7.9 -> 3.2.5
- 升级 Java 1.8 -> 17
- 升级 MyBatis 1.3.2 -> 3.0.3
- 升级 PageHelper 1.4.7 -> 2.1.0
- 升级 Druid 1.0.18 -> 1.2.21
- 升级 Jedis 2.5.2 -> 5.1.0
- 移除过时的 logback-redis-appender
- 迁移 javax.* 到 jakarta.* (Jakarta EE)
- 修复 WebMvcConfigurerAdapter 废弃 API
- 替换 sun.misc.BASE64 为 java.util.Base64
- 添加 spring-boot-starter-aop 依赖
- 更新 README 和添加 AGENTS.md